<resources>
    <string name="app_name">ProseForge</string>
    <string name="login">Connexion</string>
    <string name="signup">S\'inscrire</string>
    <string name="mail">Email</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="tag">Se connecter</string>
    <string name="swipe_left">Swipe à gauche pour t\'inscrire</string>
    <string name="image_descriptor">Une flèche</string>
    <string name="re_password">confirmez votre mot de passe</string>
    <string name="register">Inscription</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>